tests/fail/stacked_borrows/zst_slice.stderr
error: Undefined Behavior: trying to retag from <TAG> for SharedReadOnly permission at ALLOC[0x4], but that tag does not exist in the borrow stack for this location
  --> RUSTLIB/core/src/slice/mod.rs:LL:CC
   |
LL |         unsafe { &*index.get_unchecked(self) }
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                  |
   |                  trying to retag from <TAG> for SharedReadOnly permission at ALLOC[0x4], but that tag does not exist in the borrow stack for this location
   |                  this error occurs as part of retag at ALLOC[0x4..0x8]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the Stacked Borrows rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: <TAG> would have been created here, but this is a zero-size retag ([0x0..0x0]) so the tag in question does not exist anywhere
  --> $DIR/zst_slice.rs:LL:CC
   |
LL |         assert_eq!(*s.get_unchecked(1), 2);
   |                     ^^^^^^^^^^^^^^^^^^
   = note: BACKTRACE:
   = note: inside `core::slice::<impl [i32]>::get_unchecked::<usize>` at RUSTLIB/core/src/slice/mod.rs:LL:CC
note: inside `main` at $DIR/zst_slice.rs:LL:CC
  --> $DIR/zst_slice.rs:LL:CC
   |
LL |         assert_eq!(*s.get_unchecked(1), 2);
   |                     ^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

